V5.1.3: (17 Apr 2013)
- Fixed #341: Error when unloading DLL due to missing UnRegisterStyleHook
- Improved fix for #323: The fix applied in V5.1.2 was a breaking change for some projects, especially
  if not all the initialization was done in the OnInitNode event (reported as #338). vsInitialUserData
  has been renamed to vsOnFreeNodeCallRequired and is now set when GetNodeData is called. This fixes
  the possible memory leak reported in #323 and has better backward compatibility. 
- Fixed #316: These fixes are to make the treeview behave more like the windows explorer regarding
  selecting and dragging. Thanks to Stefan Glienke.
- Fixed #333: Possible Integer overflow in 64Bit builds.
- Compatibility with / packages for Delphi Xe$ / RAD Studio XE4 have been added.

V5.1.2 (04 Apr 2013):
 - Added function TVirtualTreeColumns.GetFirstColumn that returns the first column in display order.
 - Fixed issue #322: CaptionAlignment is not being restored by Header.LoadFromStream().
 - TBaseVirtualTree.GetNodeData() now calls InitNode() if the node had not beend initialized.
   This fixes issue #323 (Memory leak when the Node has children )
 - Fixed issue #326: Application hangs when aborting OLE Copy/Paste Operation
 - Added new option poResizeToFitItem to TVTHeaderPopupOption: Adds an item which, if clicked, 
   resizes all columns to fit by calling TVTHeader.AutoFitColumns()
 - Property RangeX is now public in the class TVirtualStringTree (#327)
 - TVirtualTreeColumns.HandleClick(): No longer triggering auto sort if just the checkbox in the header was clicked
 - TBaseVirtualTree.SetCheckType new resets PVirtualNode.CheckState only if the check state does not fit the new check type
 - Fixed issue #321: Delphi2009: undeclared identifier: 'fState' in VirtualTrees.pas:DrawDisabledImage()
 - Fixed issue #315: hoHeaderClickAutoSort was only working if toAutoSort is also set
 
V5.1.1 (07 Feb 2013):